Theme: Fix text-field clipping issue

--- a/docroot/sites/all/themes/opensource/sass/partials/article/_article-base.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/article/_article-base.scss
@@ -127,7 +127,7 @@
             font-size: 14px;
             border: 1px solid #cdcbca;
             height: 30px;
-            padding: 8px 8px;
+            padding: 0 8px;
         }
 
         .form-type-textarea label {
