--- a/docroot/sites/all/themes/opensource/sass/partials/base/_base.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/base/_base.scss
@@ -66,13 +66,7 @@ blockquote {
     font-size: 14px;
     border: 1px solid #cdcbca;
     height: 22px;
-    padding: 8px 8px;
-}
-.page-user-login .form-text {
-    height: auto;
-}
-.page-user-register .form-text {
-    height: auto;
+    padding: 0 8px;
 }
 .form-submit {
     border: none;
